# Wine-glass-Manipulation

./: .gitignore  README.md
src/isaacsim_assets/meshes/: glass.dae
src/isaacsim_assets/usd/: glass.usdc  pick_and_place.usd  wine_glass_manipulation.usd
src/isaacsim_winebot/: CMakeLists.txt  package.xml
src/isaacsim_winebot/config/: mtc_params.yaml
src/isaacsim_winebot/launch/: mtc.launch.py  mtc_execute.launch.py  mtc_mock.launch.py
src/isaacsim_winebot/meshes/: glass.dae
src/isaacsim_winebot/rviz/: mtc.rviz
src/isaacsim_winebot/src/: mtc_winebot.cpp  mtc_winebot_glass.cpp
